manifests/service-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: service-api
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: service-api
    spec:
      containers:
      - name: service-api
        image: kamal01236/service-api:latest
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /health/live
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
