manifests/sqlserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlserver
  namespace: nagp-kubeapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqlserver
  template:
    metadata:
      labels:
        app: sqlserver
    spec:
      securityContext:
        fsGroup: 10001  # Group ID used by SQL Server (mssql user)
      containers:
      - name: sqlserver
        image: mcr.microsoft.com/mssql/server:2019-latest
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: sqlserver-storage
          mountPath: /var/opt/mssql
      volumes:
      - name: sqlserver-storage
        persistentVolumeClaim:
          claimName: sqlserver-pvc
