manifests/service-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-api
spec:
  selector:
    app: service-api
  ports:
    - port: 80
      targetPort: 80
      name: http
  type: ClusterIP
