manifests/sqlserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sqlserver
spec:
  ports:
  - port: 1433
  selector:
    app: sqlserver
  type: ClusterIP
